HexabeatChartEditer v1.00 とりあえず完成

--- a/Ched.Core/Ched.Core.csproj
+++ b/Ched.Core/Ched.Core.csproj
@@ -70,8 +70,9 @@
     <Compile Include="Events\HighSpeedChangeEvent.cs" />
     <Compile Include="Events\TimeSignatureChangeEvent.cs" />
     <Compile Include="NoteCollection.cs" />
+    <Compile Include="Notes\D-Hold.cs" />
     <Compile Include="Notes\Damage.cs" />
-    <Compile Include="Notes\ExTap.cs" />
+    <Compile Include="Notes\D-Tap.cs" />
     <Compile Include="Notes\Flick.cs" />
     <Compile Include="Notes\Hold.cs" />
     <Compile Include="Notes\LongNoteBase.cs" />
