--- a/Ched/Ched.csproj
+++ b/Ched/Ched.csproj
@@ -240,15 +240,19 @@
     <Compile Include="UI\VersionInfoForm.Designer.cs">
       <DependentUpon>VersionInfoForm.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Localization\ErrorStrings.en.resx" />
+    <EmbeddedResource Include="Localization\ErrorStrings.en.resx">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="Localization\ErrorStrings.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>ErrorStrings.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Localization\FileFilterStrings.en.resx" />
     <EmbeddedResource Include="Localization\FileFilterStrings.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>FileFilterStrings.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Localization\MainFormStrings.en.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -354,13 +358,7 @@
     <None Include="Resources\flick.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\hold.png" />
-  </ItemGroup>
-  <ItemGroup>
     <None Include="Resources\slide.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\tap.png" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\airaction.png" />
@@ -394,9 +392,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\document--plus.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\icon.ico" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\blue-document-export.png" />
@@ -438,6 +433,24 @@
       <Project>{bd335afa-195d-4c2a-986a-167438c81976}</Project>
       <Name>Ched.Plugins</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\TapIcon.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\tap.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\d-tap.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\hold.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\d-hold.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Resources\icon.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\BASS.Native.2.4.12.2\build\BASS.Native.targets" Condition="Exists('..\packages\BASS.Native.2.4.12.2\build\BASS.Native.targets')" />
